--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - Retouch landing page
 - Change form control fonts
 - Develop a separate job for favicon grabbing and caching
+- Move title to bookmark instance
